hotfix: trying a js trick to no longer have the mobile ui overlapping on our chatbox

--- a/src/components/presenter/Presenter.css
+++ b/src/components/presenter/Presenter.css
@@ -27,6 +27,6 @@
 		max-width: 100vw;
 		max-height: 100vh;
 		width: 100vw;
-		height: 100vh;
+		height: calc(var(--vh, 1vh) * 100);
 	}
 }
